fixes some overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,9 @@ img.mole {
     border-radius: 0 15px 15px 0;
     color: white;
     font-size: 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .score-item {
